[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/main_screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_screens/placeholder.png" type="Texture" id=2]
[ext_resource path="res://scenes/buttons/play/Play.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/buttons/info/Info.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/buttons/music/music_normal.png" type="Texture" id=5]
[ext_resource path="res://scenes/buttons/music/music_pressed.png" type="Texture" id=6]
[ext_resource path="res://scenes/buttons/music/music_hover.png" type="Texture" id=7]
[ext_resource path="res://scenes/buttons/sound/sound_normal.png" type="Texture" id=8]
[ext_resource path="res://scenes/buttons/sound/sound_pressed.png" type="Texture" id=9]
[ext_resource path="res://scenes/buttons/sound/sound_hover.png" type="Texture" id=10]
[ext_resource path="res://scenes/buttons/config/config_normal.png" type="Texture" id=11]
[ext_resource path="res://scenes/buttons/config/config_pressed.png" type="Texture" id=12]
[ext_resource path="res://scenes/buttons/config/config_hover.png" type="Texture" id=13]
[ext_resource path="res://fonts/nokia/main_title-nokia-24.tres" type="DynamicFont" id=14]
[ext_resource path="res://fonts/nokia/mini-nokia-8.tres" type="DynamicFont" id=15]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title1:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.2, 1.5 ),
"transitions": PoolRealArray( 0.25, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title2:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 0.25, 0.25, 0.25, 0.25 ),
"update": 0,
"values": [ -9.5, -12.0, -6.5, -9.5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "play"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 0.424459, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Placeholder" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="Play" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 110.0
margin_top = 90.0
margin_right = 126.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 8, 8 )

[node name="Info" parent="." instance=ExtResource( 4 )]
margin_left = 200.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 17.0

[node name="Music" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 64.0
margin_right = 208.0
margin_bottom = 73.0
rect_scale = Vector2( 4, 4 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Sound" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 112.0
margin_right = 208.0
margin_bottom = 121.0
rect_scale = Vector2( 4, 4 )
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Config" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 112.0
margin_right = 16.0
margin_bottom = 121.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="Title2" type="Label" parent="."]
margin_left = 44.0
margin_top = 31.0
margin_right = 179.0
margin_bottom = 61.0
rect_rotation = -9.5
rect_pivot_offset = Vector2( 72, 15 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.352941, 0.772549, 0.309804, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Monsters"
align = 1
valign = 1

[node name="Title1" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 112.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 46, 15 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0.596078, 0.862745, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Hybrid"
align = 1
valign = 1

[node name="Version" type="Label" parent="."]
margin_left = 189.0
margin_top = 150.0
margin_right = 237.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0.596078, 0.862745, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0.1.0"
align = 2

[node name="GithubGameOff" type="Label" parent="."]
visible = false
margin_left = 80.0
margin_top = 144.0
margin_right = 159.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.148284, 0.862745, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "#GithubGameOff"
align = 2

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )
anims/play = SubResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
visible = false
position = Vector2( 120, 80 )
current = true
smoothing_enabled = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Info" to="." method="_on_Info_pressed"]
[connection signal="toggled" from="Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="Sound" to="." method="_on_Sound_toggled"]
[connection signal="pressed" from="Config" to="." method="_on_Config_pressed"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
